# iLovePPT

./: .gitignore  CLAUDE.md  README.md  USAGE.zh.md  pyproject.toml
.claude/: pipeline-protocol.md  pipeline-protocol.team-legacy.md.bak
.claude/agents/: critic-rubric.yaml  iloveppt-audience.md  iloveppt-author.md  iloveppt-brainstorm.md  iloveppt-builder.md  iloveppt-content-review.md  iloveppt-critic.md  iloveppt-designer.md  iloveppt-self-check.md  iloveppt-template-extractor.md  iloveppt-yaml-fixer.md  iloveppt.md
.claude/hooks/: block-dangerous-bash.sh  check-progress-file.sh  sanitize-tool-output.sh  scan-commit.sh  scan-secrets.sh  session-start-context.sh  teammate-keepalive.sh  validate-review-verdict.sh  validate-task-schema.sh  validate_agent_return.py
.claude/standards/: ac-lifecycle.md  apple-native.md  coding.md  communication.md  cost-budget.md  deployment.md  document-rules.md  miniapp.md  observability.md  plans-format.md  qa-close-verify.md  review-checklist.md  security.md  superpowers.md  team-roles.md  testing.md  versioning.md  workflow.md
.github/workflows/: ci.yml
decks/: .gitignore
decks/claude-code-training/: .iloveppt_author_state.json  .iloveppt_dialog_state.json  .~deck_v1_handout.pptx  audience_review.md  audience_review_r2.md  audience_review_r3.md  audience_review_r4.md  brief.md  (+8 more)
docs/: MANUAL.zh.md  adding-new-layout.md  agent-internals.zh.md  cost-budget.md  template-extraction.md  writing-custom-themes.md
evals/: README.md  rubric.md  run_eval.sh
scripts/: p1_1_backfill_variants.py
templates/: README.md  example.yaml
(+100 files in other folders)
